objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AdminUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MRS - Contact Admin User indicates users who can provision users for their account</description>
        <label>Admin User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactPreference__c</fullName>
        <description>Populated by Internal &apos;New Merit Review case&apos; Visualforce page. Also editable by users on Contact layout.</description>
        <inlineHelpText>The preferred contact method indicated by the contact.</inlineHelpText>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Post</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Limited (mental health risk)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DuplicateFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by a Batch Job to indicate if another record/s are found that meet the criteria.</description>
        <label>Duplicate Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DuplicateStatus__c</fullName>
        <description>This field is managed by users to indicate which records have been data quality checked. are considered clean or not after data checks have commenced. It is also populated by a Batch Job when records meet matching criteria.</description>
        <label>Duplicate Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Duplicate_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Other_Specialist_Area__c</fullName>
        <label>Other Specialist Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complaints Level 1</fullName>
                </value>
                <value>
                    <fullName>Complaints Level 2</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <isActive>false</isActive>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                    <label>**Primary</label>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                    <label>*Secondary</label>
                </value>
                <value>
                    <fullName>Complaints Level 1</fullName>
                    <isActive>false</isActive>
                    <label>Complaints Level 1</label>
                </value>
                <value>
                    <fullName>Complaints Level 2</fullName>
                    <isActive>false</isActive>
                    <label>Complaints Level 2</label>
                </value>
                <value>
                    <fullName>Data</fullName>
                    <isActive>false</isActive>
                    <label>Data</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IdentificationNumber__c</fullName>
        <description>Any kind of identification for the Contact record</description>
        <label>Identification Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdentificationValidFrom__c</fullName>
        <description>The date from which the Identification Number is valid.</description>
        <label>Identification Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IdentificationValidTo__c</fullName>
        <description>The date to which the Identification Number is valid</description>
        <inlineHelpText>The date to which the Identification Number is valid</inlineHelpText>
        <label>Identification Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InterpreterRequired__c</fullName>
        <description>Accessibility Field: Do you require an interpreter?</description>
        <label>Interpreter Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KnownWorkerDisabilities__c</fullName>
        <description>Does the worker have any disabilities we need to know about when communicating with them?</description>
        <label>Known Worker Disabilities</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Worker requires an interpreter who speaks the entered language</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Chinese (Simplified)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Traditional)</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazil)</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MRSFullName__c</fullName>
        <formula>FirstName + &apos; &apos; + LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Triage</fullName>
                </value>
                <value>
                    <fullName>Claims Manager</fullName>
                </value>
                <value>
                    <fullName>Worker</fullName>
                </value>
                <value>
                    <fullName>Legal Rep</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Sole Practitioner</fullName>
                </value>
                <value>
                    <fullName>Lawyer</fullName>
                    <isActive>false</isActive>
                    <label>Lawyer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>DRS_Contact</fullName>
        <active>true</active>
        <description>This record type is for Contacts associated to the DRS business</description>
        <label>DRS-Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>